--- a/RoadNetworkGenerator/RoadNetworkGenerator.csproj
+++ b/RoadNetworkGenerator/RoadNetworkGenerator.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Engine\GameEngine.csproj" />
+    <ProjectReference Include="..\Graph\Net.csproj" />
   </ItemGroup>
 
 </Project>
