--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Engine\GameEngine.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="GameEngine\Components\" />
+  </ItemGroup>
+
 </Project>
