--- a/Engine/GameEngine.csproj
+++ b/Engine/GameEngine.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="OpenTK" Version="4.6.7" />
+    <PackageReference Include="Unofficial.AssimpNet" Version="4.0.10" />
   </ItemGroup>
 
   <ItemGroup>
