--- a/PipesDemo/PipesDemo.csproj
+++ b/PipesDemo/PipesDemo.csproj
@@ -23,27 +23,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Engine\GameEngine.csproj" />
+    <ProjectReference Include="..\Pipes\Pipes.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Content\IPipe.mtl">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Content\IPipe.obj">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Content\LPipe.mtl">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Content\LPipe.obj">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Content\Ring.mtl">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Content\Ring.obj">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Update="Sample\House.bmp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
