--- a/SplineDemo/SplineDemo.csproj
+++ b/SplineDemo/SplineDemo.csproj
@@ -11,4 +11,13 @@
     <ProjectReference Include="..\Engine\GameEngine.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Content\Cube.mtl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Content\Cube.obj">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
