Move model loading logic into Model

--- a/Engine/GameEngine.csproj
+++ b/Engine/GameEngine.csproj
@@ -23,9 +23,25 @@
   <ItemGroup>
     <PackageReference Include="AssimpNet" Version="4.1.0" />
     <PackageReference Include="OpenTK" Version="4.6.7" />
+    <PackageReference Include="StbImageSharp" Version="2.27.11" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Content\Cube.mtl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Content\Cube.obj">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Content\default.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Content\Pyramid.mtl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Content\Pyramid.obj">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Shaders\shader3d.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
