Constant for rule resolution

--- a/PatternDemo/PatternDemo.csproj
+++ b/PatternDemo/PatternDemo.csproj
@@ -21,6 +21,15 @@
     <None Update="Content\Sample.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Content\Sample1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Content\Sample2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Content\Sample3.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Content\Structure.mtl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
