Implement basic grid on mesh with square surfaces

--- a/TriangulatedTopology/TriangulatedTopology.csproj
+++ b/TriangulatedTopology/TriangulatedTopology.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Engine\GameEngine.csproj" />
     <ProjectReference Include="..\MeshTopology\MeshTopology.csproj" />
+    <ProjectReference Include="..\TextureUtils\TextureUtils.csproj" />
   </ItemGroup>
 
   <ItemGroup>
