Implement WFC on ilands

--- a/TriangulatedTopology/TriangulatedTopology.csproj
+++ b/TriangulatedTopology/TriangulatedTopology.csproj
@@ -14,10 +14,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Content\Cube.mtl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Content\Cube.obj">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Content\Room.mtl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Content\Room.obj">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Content\WallLogical.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
