--- a/Engine/GameEngine.csproj
+++ b/Engine/GameEngine.csproj
@@ -42,6 +42,12 @@
     <None Update="Content\Pyramid.obj">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Content\Sphere.mtl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Content\Sphere.obj">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Shaders\Material.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
