--- a/DungeonVisualization/DungeonViz/DungeonViz.csproj
+++ b/DungeonVisualization/DungeonViz/DungeonViz.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.2.1" />
     <PackageReference Include="Edgar-DotNet" Version="2.0.0-alpha.1" />
+    <PackageReference Include="GnuPlotSharp" Version="1.1.6756.26087" />
   </ItemGroup>
 
 </Project>
