Minimal and brutal fixes for level demo

--- a/LevelDemo/LevelDemo.csproj
+++ b/LevelDemo/LevelDemo.csproj
@@ -14,6 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Content\FloorLogical.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Content\Models\ComplexLevel.mtl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
